@@ -93,7 +93,9 @@ class GSDReader(base.ReaderBase):
         .. versionchanged:: 2.0.0
             Now use a picklable :class:`gsd.hoomd.HOOMDTrajectory`--
             :class:`GSDPicklable`
-
+        .. versionchanged:: 2.6.0
+           Support for GSD versions below 3.0.1 have been dropped. This
+           includes support for schema 1.3.
         """
         if not HAS_GSD:
             errmsg = "GSDReader: To read GSD files, please install gsd"
@@ -109,7 +111,7 @@ class GSDReader(base.ReaderBase):
     def open_trajectory(self):
         """opens the trajectory file using gsd.hoomd module"""
         self._frame = -1
-        self._file = gsd_pickle_open(self.filename, mode='rb')
+        self._file = gsd_pickle_open(self.filename, mode='r')
 
     def close(self):
         """close reader"""
@@ -186,8 +188,8 @@ class GSDPicklable(gsd.hoomd.HOOMDTrajectory):
     ::
 
         gsdfileobj = gsd.fl.open(name=filename,
-                                     mode='rb',
-                                     application='gsd.hoomd '+gsd.__version__,
+                                     mode='r',
+                                     application='gsd.hoomd '+ gsd.version.version,
                                      schema='hoomd',
                                      schema_version=[1, 3])
         file = GSDPicklable(gsdfileobj)
@@ -208,8 +210,8 @@ class GSDPicklable(gsd.hoomd.HOOMDTrajectory):
         return self.file.name, self.file.mode
 
     def __setstate__(self, args):
-        gsd_version = gsd.__version__
-        schema_version = [1, 4] if gsd_version >= '1.9.0' else [1, 3]
+        gsd_version = gsd.version.version
+        schema_version = [1, 4]
         gsdfileobj = gsd.fl.open(name=args[0],
                                  mode=args[1],
                                  application='gsd.hoomd ' + gsd_version,
@@ -218,7 +220,7 @@ class GSDPicklable(gsd.hoomd.HOOMDTrajectory):
         self.__init__(gsdfileobj)
 
 
-def gsd_pickle_open(name, mode='rb'):
+def gsd_pickle_open(name: str, mode: str='r'):
     """Open hoomd schema GSD file with pickle function implemented.
 
     This function returns a GSDPicklable object. It can be used as a
@@ -235,8 +237,8 @@ def gsd_pickle_open(name, mode='rb'):
     ----------
     name : str
         a filename given a text or byte string.
-    mode: {'r', 'rb'} (optional)
-        'r', 'rb':  open for reading;
+    mode: str, optional
+        'r':  open for reading.
 
     Returns
     -------
@@ -270,11 +272,14 @@ def gsd_pickle_open(name, mode='rb'):
 
 
     .. versionadded:: 2.0.0
+    .. versionchanged:: 2.6.0
+       Only GSD versions 3.0.1+ are supported. 'rb' mode support
+       has been replaced with 'r' mode.
     """
-    gsd_version = gsd.__version__
-    schema_version = [1, 4] if gsd_version >= '1.9.0' else [1, 3]
-    if mode not in {'r', 'rb'}:
-        raise ValueError("Only read mode ('r', 'rb') "
+    gsd_version = gsd.version.version
+    schema_version = [1, 4]
+    if mode != 'r':
+        raise ValueError("Only read mode 'r' "
                          "files can be pickled.")
     gsdfileobj = gsd.fl.open(name=name,
                              mode=mode,
