@@ -78,7 +78,7 @@ extra_formats = [
     "chemfiles>=0.10",
     "pyedr>=0.7.0",
     "pytng>=0.2.3",
-    "gsd>=1.9.3,<3.0",
+    "gsd>3.0.0",
 ]
 analysis = [
     "seaborn",
